[gd_scene load_steps=5 format=3 uid="uid://cmx8w5rc3w3uv"]

[ext_resource type="Script" uid="uid://bokiv2ecrpdvc" path="res://Scripts/pm_skill_tree.gd" id="1_yc2y8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_window"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_closebtn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PMSkillTree" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yc2y8")

[node name="Window" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -450.0
offset_right = 750.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_window")

[node name="MainVBox" type="VBoxContainer" parent="Window"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderPanel" type="Panel" parent="Window/MainVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="TitleLabel" type="Label" parent="Window/MainVBox/HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -11.5
offset_right = 88.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Сотрудники"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Window/MainVBox/HeaderPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -15.0
offset_right = -24.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_closebtn")
text = "X"

[node name="CardsMargin" type="MarginContainer" parent="Window/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="Window/MainVBox/CardsMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardsContainer" type="VBoxContainer" parent="Window/MainVBox/CardsMargin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="EmptyLabel" type="Label" parent="Window/MainVBox/CardsMargin/ScrollContainer/CardsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Нет сотрудников. Наймите кого-нибудь."
horizontal_alignment = 1
